# rml-py

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  r2rml-py.py  r2rml-py.spec  rml-py.spec
model/: config_parser.py  csv2rdf.py  namespace.py  object_map_parser.py  predicate_object_map_parser.py  subject_map_parser.py  toRDF.py  triples_map_parser.py
model/core/: subject_object_map_parser.py
model/rml/: object_map_parser.py  predicate_object_map_parser.py  subject_map_parser.py  triples_map_parser.py
rml_py/: main.py
rml_py/model/: config_parser.py  format_parser.py  logical_target_parser.py
rml_py/model/core/: subject_object_map_parser.py
rml_py/model/rml/: object_map_parser.py  predicate_object_map_parser.py  subject_map_parser.py
test/: test_general.py
